--- a/PDF_Reader/PDF_Reader.csproj
+++ b/PDF_Reader/PDF_Reader.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
+    <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="24.1.41" />
   </ItemGroup>
 
 </Project>
