--- a/PDF_Reader/PDF_Reader.csproj
+++ b/PDF_Reader/PDF_Reader.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Grpc.Core" Version="2.46.6" />
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="24.1.41" />
   </ItemGroup>
